--- a/jardineria_app/templates/crud/detalles_pedidos_usuario.html
+++ b/jardineria_app/templates/crud/detalles_pedidos_usuario.html
@@ -14,40 +14,43 @@
         <h4>Dirección: {{ usuario.direccion }}</h4>
         <h4>RUT: {{ usuario.rut }}</h4>
 
-        <table class="table">
-            <thead>
-                <tr>
-                    <th scope="col">Imagen</th>
-                    <th scope="col">Producto</th>
-                    <th scope="col">Valor</th>
-                    <th scope="col">Cantidad</th>
-                    <th scope="col">Subtotal</th>
-                    <th scope="col">Acciones</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for detalle in detalles_pedidos %}
-                <tr>
-                    <td class="images"><img src="{{ detalle.producto.imagen.url }}" width="50px" height="50px"></td>
-                    <td>{{ detalle.producto.nombre_producto }}</td>
-                    <td>${{ detalle.producto.precio }}</td>
-                    <td>{{ detalle.cantidad }}</td>
-                    <td>${{ detalle.subtotal }}</td>
-                    <td>
-                        <form method="POST" action="{% url 'detalles_pedidos_usuario' usuario.id %}">
-                            {% csrf_token %}
-                            <input type="hidden" name="pedido_id" value="{{ detalle.pedido.id }}">
+        <form method="POST" action="{% url 'detalles_pedidos_usuario' usuario.id %}">
+            {% csrf_token %}
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th scope="col">Imagen</th>
+                        <th scope="col">Producto</th>
+                        <th scope="col">Valor</th>
+                        <th scope="col">Cantidad</th>
+                        <th scope="col">Subtotal</th>
+                        <th scope="col">Acciones</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for detalle in detalles_pedidos %}
+                    <tr>
+                        <td class="images"><img src="{{ detalle.producto.imagen.url }}" width="50px" height="50px"></td>
+                        <td>{{ detalle.producto.nombre_producto }}</td>
+                        <td>${{ detalle.producto.precio }}</td>
+                        <td>
+                            <input type="number" name="cantidad_{{ detalle.pedido.id }}" value="{{ detalle.cantidad }}" min="1" max="{{ detalle.producto.cantidad }}" required>
+                        </td>
+                        <td>${{ detalle.subtotal }}</td>
+                        <td>
+                            <input type="hidden" name="pedido_id_{{ detalle.pedido.id }}" value="{{ detalle.pedido.id }}">
+                            <button type="submit" name="action" value="modificar" class="btn btn-primary btn-sm">Guardar</button>
                             <button type="submit" name="action" value="eliminar" class="btn btn-danger btn-sm">Eliminar</button>
-                        </form>
-                    </td>
-                </tr>
-                {% empty %}
-                <tr>
-                    <td colspan="6">No hay productos en tu pedido.</td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
+                        </td>
+                    </tr>
+                    {% empty %}
+                    <tr>
+                        <td colspan="6">No hay productos en tu pedido.</td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </form>
 
         <h4>Total del pedido: ${{ total_pedido }}</h4>
 
